--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -132,7 +132,7 @@
   <div class="footer-copyright text-center py-3">
     <div class="container-fluid">
       © 2018 Copyright:
-      <a href="https://addictaf.io"> AddictAF.io </a>
+      <a href="https://addictaf.com"> AddictAF.com </a>
 
     </div>
   </div>
