--- a/src/app/components/p404/p404.component.html
+++ b/src/app/components/p404/p404.component.html
@@ -4,9 +4,9 @@
     <p>This page cannot be found. Maybe try searching what you want </p>
   </div>
 
-  <div class="form form-inline">
+  <div class="form form-inline align-middle">
     <form action="#" class="form-inline text-center mb-4">
-      <input class="form-control" type="text" name="username" id="username">
+      <input class="form-control" type="text" name="category" id="username">
       <button class="btn btn-warning form-control"><i class="fa fa-search"> Search</i></button>
     </form>
   </div>
