--- a/src/app/components/explore/explore.component.html
+++ b/src/app/components/explore/explore.component.html
@@ -5,7 +5,7 @@
      (scrolled)="getNext()">
   <div *ngFor="let post of posts" class="col-6">
     <!--<div class="col-sm-4">-->
-      <img src="{{post.image_sm}}" class="img-fluid img-thumbnail" alt="{{post.caption}}" (click)="onSelectPost(post)">
+      <img src="{{post.image}}" class="img-fluid img-thumbnail" alt="{{post.caption}}" (click)="onSelectPost(post)">
     <!--</div>-->
   </div>
 </div>
