--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -34,12 +34,19 @@
 
 <ng-template #postDetail>
   <video class="embed-responsive" controls>
-    <source src="{{post.video_hd}}" type="video/mp4">
+    <source src="{{post.video}}" type="video/mp4">
     <img src="{{post.image_hd}}" alt="{{post.caption}}" class="img-fluid" #imagePost>
   </video>
 </ng-template>
 <ng-template #imagePost>
-  <img src="{{post.image_hd}}" alt="{{post.caption}}" class="img-fluid" #imagePost>
+  <img src="{{post.image}}" alt="{{post.caption}}" class="img-fluid" #imagePost>
 </ng-template>
 
-<div class="fb-comments" data-href="https://www.addictaf.com/" data-numposts="5"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.0&appId=245244156026761&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-comments"></div>
